added jakarta.xml.bind removed dependencied to collib removed dependencied to log4j in src, in component still present